--- a/templates/web/booking_form.html
+++ b/templates/web/booking_form.html
@@ -59,6 +59,10 @@
 
             init();
 
+
+            // can't work out how to get ref hidden in django so do it here
+            $("#id_ref").hide();
+
             // ON CHANGES
 
             // when client is selected, show rest of form
