--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,3 @@
-{% load bootstrap3 %}
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,7 +13,7 @@
 
 
     <!--Core CSS -->
-    {% bootstrap_css %}
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" media="screen" rel="stylesheet">
 
     <link href="{{ STATIC_URL }}css/bootstrap-reset.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}font-awesome/css/font-awesome.css" rel="stylesheet" />
@@ -42,7 +39,7 @@
 
     <!-- tuning.css needs to be after extra_head where widget related css may be loaded but before
     the css block where page specific css can override it -->
-   <link href="{{ STATIC_URL }}css/tuning.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/tuning.css" rel="stylesheet">
 
     {% block css %}
     {% endblock css %}
@@ -267,21 +264,33 @@
                     </li>
                     {% if user.is_authenticated %}
 
-                        <a href="javascript:;">
-                            <i class="fa fa-laptop"></i>
-                            <span>Bookings</span>
-                        </a>
+                         <li><a href="/calendar/">Calendar</a></li>
 
                         {% if user.is_staff %}
+
+                            <li class="sub-menu dcjq-parent-li">
+                                <a href="javascript:;" class="dcjq-parent active">
+                                    <i class="fa fa-book"></i>
+                                    <span>New Booking</span>
+                                    <span class="dcjq-icon"></span></a>
+                                <ul class="sub" style="display: block;">
+                                    {% for item in CLIENTS %}
+                                        <li><a href="/booking/add/{{ item.id }}/">{{ item.name }}</a></li>
+                                    {% endfor %}
+
+                                </ul>
+                            </li>
 
                             <li class="sub-menu">
                                 <a href="javascript:;">
                                     <i class="fa fa-laptop"></i>
-                                    <span>Bookings</span>
+                                    <span>Update Bookings</span>
                                 </a>
                                 <ul class="sub">
-                                    <li><a href="/calendar/">Calendar</a></li>
-                                    <li><a href="/booking/add/">New Booking</a></li>
+
+
+
+
                                     <li><a href="/booking/assign/">Assign Tuner</a></li>
                                     <li><a href="/booking/to_completed/">Mark Completed</a></li>
                                     <li><a href="/booking/to_paid/">Payments</a></li>
@@ -347,8 +356,7 @@
                             <header class="panel-heading">{% block heading %}{% endblock %}
                         <span class="tools pull-right">
                             <a href="javascript:;" class="fa fa-chevron-down"></a>
-                            <a href="javascript:;" class="fa fa-cog"></a>
-                            <a href="javascript:;" class="fa fa-times"></a>
+
                          </span>
                             </header>
                             <div class="panel-body">
@@ -427,11 +435,13 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/json2/20110223/json2.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
-{% bootstrap_javascript %}
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+
 <script src="{{ STATIC_URL }}js/jquery.scrollTo.min.js"></script>
 <script src="{{ STATIC_URL }}js/jquery.slimscroll.min.js"></script>
 <script src="{{ STATIC_URL }}js/jquery.nicescroll.js"></script>
 <script src="{{ STATIC_URL }}js/jquery.tmpl.min.js"></script>  <!-- for displaying comments -->
+<script src="{{ STATIC_URL }}js/jquery.dcjqaccordion.2.7.js"></script>
 
 {#<script src="https://raw.github.com/andris9/jStorage/master/jstorage.js"></script>#}
 <script src="{{ STATIC_URL }}js/moment.min.js"></script>
@@ -498,6 +508,18 @@
 <script>
 
     function do_last() {
+
+        // make left side nav accordian
+        $('#nav-accordion').dcAccordion({
+                eventType: 'click',
+                autoClose: true,
+                saveState: true,
+                disableLink: true,
+                speed: 'slow',
+                showCount: false,
+                autoExpand: true,
+                classExpand: 'dcjq-current-parent'
+            });
 
         // tool tips
 
