--- a/web/static/css/tuning.css
+++ b/web/static/css/tuning.css
@@ -5,6 +5,12 @@ a.logo {
     margin:20px 0 0 25px;
 }
 
+
+.booking_status_0 {
+    background-color: #f5f5f5;
+    color: black !important ;
+}
+
 .booking_status_1 {
     background-color: #fa8564;
 }
@@ -56,7 +62,7 @@ tr.booking_status_9{
     background-color: rgba(253, 215, 82, 0.49);
 }
 
-.booking_status_1_icon:before  {
+.booking_status_0_icon:before, .booking_status_1_icon:before  {
   content: "\f067";
 }
 .booking_status_3_icon:before  {
@@ -99,5 +105,5 @@ color: #454545;
 }
 
 .editable_content {
-    font-size:14px;
+    font-size:18px;
 }
